syntax = "proto3";
package privacy.privacy;

option go_package = "privacy/x/privacy/types";

message OutputCoinLength {
  bytes value = 1;
}
